# puppy_nuxt_app

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  nuxt.config.js  package-lock.json  package.json
components/: BUILD.bazel  Header.vue  Puppy.vue
gazelle/: BUILD.bazel  config.go  fileinfo.go  fileinfo_test.go  js.go  resolver.go  sass.go
layouts/: BUILD.bazel  default.vue
pages/: BUILD.bazel  README.md  index.test.js  index.vue
pages/about/: BUILD.bazel  index.vue
pages/puppies/: BUILD.bazel  index.vue
pages/puppies/_id/: BUILD.bazel  index.vue
